# pluginlib_testing

pkg_a/: CMakeLists.txt  package.xml
pkg_a/include/pkg_a/: plugin_base.hpp
pkg_a/include/totem_manipulation_hardware_interface/: plugin_base.hpp
pkg_a/src/: test_plugin.cpp
pkg_b/: CMakeLists.txt  package.xml  plugins.xml
pkg_b/include/pkg_b/: driver.hpp
pkg_b/src/: plugin_impl.cpp
